<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    tools:context=".Menu">

    <Button
        android:id="@+id/results_button"
        android:layout_width="274dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/results_icon_48px"
        android:text="@string/results_button"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/alone_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/alone_button"
        app:layout_constraintTop_toBottomOf="@+id/alone_button" />

    <Button
        android:id="@+id/class_button"
        android:layout_width="274dp"
        android:layout_height="82dp"
        android:layout_marginBottom="16dp"
        android:drawableRight="@drawable/class_icon_48px"
        android:text="@string/class_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/alone_button"
        app:layout_constraintEnd_toEndOf="@+id/alone_button"
        app:layout_constraintStart_toStartOf="@+id/alone_button" />

    <Button
        android:id="@+id/alone_button"
        android:layout_width="274dp"
        android:layout_height="82dp"
        android:drawableRight="@drawable/alone_icon_48px"
        android:text="@string/alone_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>